@@ -1031,7 +1031,7 @@ bool KPresenterDoc::saveOasis( KoStore* store, KoXmlWriter* manifestWriter )
     recalcVariables( VT_TIME );
 
     KoGenStyles mainStyles;
-    KoSavingContext savingContext( mainStyles, KoSavingContext::Store );
+    KoSavingContext savingContext( mainStyles, 0, false, KoSavingContext::Store );
 
     // Save user styles as KoGenStyle objects
     KoSavingContext::StyleNameMap map = m_styleColl->saveOasis( mainStyles, KoGenStyle::STYLE_USER, savingContext );
